# Natives

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  COVERAGE_MANIFEST.md  PROMPT.md  README.md  electron-builder.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.atomcode/: setup-state.json
archive/src-main/: agent-status.test.ts  bridge-host.test.ts  config-manager.ts  database.ts  disk-usage.test.ts  disk-usage.ts  e2e.test.ts  file-manager.ts  file-watcher.ts  installer.ts  permission-center.ts  recent-files.ts  screenshot.ts  session-scanner.test.ts  session-scanner.ts  skill-stats.ts  skills-manager.test.ts  skills-manager.ts  thumbnail.ts  update-checker.test.ts  updater.ts  watchdog.ts
docs/: I18N_REMEDIATION_PLAN.md  PRD-v2.md  PRD.md  REMEDIATION_EXECUTION_V4.md  REMEDIATION_PLAN.md  REMEDIATION_PLAN_V2.md  REMEDIATION_PLAN_V4.md  STYLE_GUIDE_AUDIT.md  fanbox.md  natives_goal_compiler.md  refactor-plan-dashboard-ccusage.md  refactor-plan-terminal-shell.md
docs/adr/: 0001-session-token-handshake.md  0002-postmessage-origin-verification.md  0003-plugin-ipc-main-process-relay.md  (+5 more)
electron/: main.ts  preload.ts  tsconfig.json
plugin-template/: README.md  index.html  manifest.json  natives-sdk.d.ts
scripts/: check-remnants.sh  i18n-check.mjs  terminal-health-check.sh
src-tauri/: Cargo.toml  build.rs  ghostty-vt-stub.c  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  archive.rs  bridge_sdk.js  db.rs  disk_usage.rs  env_manager.rs  error.rs  file_manager.rs  fs_watch.rs  ghostty_config.rs  ghostty_vt.rs  git.rs  html_preview.rs  http_server.rs  lib.rs  lid_guard.rs  main.rs  module_manager.rs  permission_center.rs  release_wizard.rs  screenshot.rs  search.rs  terminal.rs  terminal_recorder.rs  thumbnail.rs  token_manager.rs  update_checker.rs
src-tauri/src/commands/: agent.rs  archive.rs  bridge.rs  clipboard.rs  codegraph.rs  db.rs  disk.rs  env.rs  fs.rs  git.rs  locale.rs  mod.rs  module.rs  notification.rs  plugins.rs  provider.rs  release.rs  screenshot.rs  search.rs  shell.rs  skills.rs  state.rs  terminal.rs  theme.rs  thumbnail.rs  update.rs  usage.rs  watch_preview.rs  wechat.rs  widget.rs  window.rs
src-tauri/src/wechat/: bridge.rs  driver.rs  ilink.rs  mod.rs
src-tauri/tests/: basic_test.rs
(+460 files in other folders)
