[package]
name = "natives"
version = "0.1.0"
description = "AI Steam Base — Desktop Application Container"
authors = ["Natives"]
edition = "2021"

[lib]
name = "natives_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
notify = "7"
trash = "5"
whoami = "1"
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
zip = "2"
base64 = "0.22"
open = "5"
tiny_http = "0.12"
